# rustribo

./: Cargo.toml  README.md  main.rs  ribo_concat_diamond_RCprot.py
src/: main.rs
