[package]
name = "annots"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.2.20", features = ["derive"]}
bio="0.38.0"
protein-translate="0.2.0"
bio-types="0.12.0"
anyhow="1.0.55"
itertools="0.10.3"
regex="1.5.4"
glob="0.3.0"
csv = "1.1"
serde = {version="1.0", features=["derive"]}
multimap="0.8.3"
intervallum="1.3.0"
