[package]
name = "rustribo"
version = "0.1.0"
edition = "2018"
author = "LCrossman"
about = "Ribosomal protein and DNA sequence extraction tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
bio = "1.0"
protein-translate = "0.2.0"
bio-types = "0.13.0"
itertools = "0.10.3"
regex = "1.5.4"
glob = "0.3.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
multimap = "0.8.3"
intervallum = "1.3.0"